@@ -13,7 +13,7 @@ $c->{frontpage} = "$c->{base_url}/";
 $c->{userhome} = "$c->{perl_url}/users/home";
 
 # By default all paths are rewritten to the relevant language directory
-# except for /perl/. List other exceptions here.
+# except for /cgi/. List other exceptions here.
 # These will be used in a regular expression, so characters like
 # .()[]? have special meaning.
 $c->{rewrite_exceptions} = [ '/cgi/' ];
