@@ -186,7 +186,7 @@ EPrints Modules
 <div class="ep_search_results"><epc:pin name="results"/></div>
 <div class="ep_search_controls_bottom"><epc:pin name="controls_if_matches"/></div>
 </epp:phrase>
-    <epp:phrase id="lib/searchexpression:export_section">Export all matching items as: <epc:pin name="menu"/> <epc:pin name="button"/></epp:phrase>
+    <epp:phrase id="lib/searchexpression:export_section">Export as <epc:pin name="menu"/> <epc:pin name="button"/></epp:phrase>
     <epp:phrase id="lib/searchexpression:export_button">Export</epp:phrase>
     <epp:phrase id="lib/searchexpression:next">Next <epc:pin name="n"/></epp:phrase>
     <epp:phrase id="lib/searchexpression:prev">Previous <epc:pin name="n"/></epp:phrase>
@@ -550,8 +550,8 @@ User Area CGI Scripts
     <epp:phrase id="cgi/login:forever">forever (until I log out)</epp:phrase>
     <epp:phrase id="cgi/login:bind">yes (more secure)</epp:phrase>
     <epp:phrase id="cgi/login:dont_bind">no (more convenient)</epp:phrase>
-	<epp:phrase id="cgi/login:failed">Incorrect username or password. If you have forgotten your password, you may <a href="/perl/reset_password">reset</a> it.</epp:phrase>
-    <epp:phrase id="cgi/login:logged_in_as"><p>You are already logged in as <epc:pin name="name"/>.</p> <p>If you wish to log in as a different user you must <a href="/perl/users/logout">Logout</a> first.</p></epp:phrase>
+	<epp:phrase id="cgi/login:failed">Incorrect username or password. If you have forgotten your password, you may <a href="{$config{perl_url}}/reset_password">reset</a> it.</epp:phrase>
+    <epp:phrase id="cgi/login:logged_in_as"><p>You are already logged in as <epc:pin name="name"/>.</p> <p>If you wish to log in as a different user you must <a href="{$config{perl_url}}/users/logout">Logout</a> first.</p></epp:phrase>
 
 <!--********************************************************************** 
 Staff CGI Scripts
