@@ -1,3 +1,3 @@
 User-agent: *
-Disallow: /perl/
+Disallow: /cgi/
 
